<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hint_input_address_hash_block">请输入地址/交易哈希/区块链</string>
    
    <string name="nft_property">NFT资产</string>
    
    <string name="integral_types">积分种类</string>
    
    <string name="block_height">区块高度</string>
    
    <string name="trade_total">交易总数</string>

    <string name="block_hash">区块哈希</string>

    <string name="trade_number">交易笔数</string>

    <string name="trade_num">交易数量</string>

    <string name="recent_block_information">最新区块信息</string>

    <string name="recent_trade_information">最新交易信息</string>

    <string name="more">更多</string>

    <string name="height">高度</string>

    <string name="create_time">生成时间</string>

    <string name="score">积分</string>

    <string name="check_more">查看更多</string>

    <string name="pre_block">上一个区块</string>

    <string name="next_block">下一个区块</string>

    <string name="block_size">区块大小</string>

    <string name="trade_type">交易类型</string>

    <string name="trade_hash">交易哈希</string>

    <string name="trade_time">交易时间</string>

    <string name="product_name">物品名称</string>

    <string name="token_id">Token ID</string>

    <string name="product_photo">物品图片</string>

    <string name="product_introduce">物品介绍</string>

    <string name="ruler_address">合约地址</string>

    <string name="send_address">发送方地址</string>

    <string name="receive_address">接收方地址</string>

    <string name="sender">发送方</string>

    <string name="receiver">接收方</string>

    <string name="trade_detail">交易详情</string>

    <string name="detail_str">详情</string>

    <string name="service_charge">手续费</string>

    <string name="trade_address">交易地址</string>

    <string name="nft_token_information">NFT Token信息</string>

    <string name="type">类型</string>

    <string name="current_page">当前页</string>

    <string name="total_page">总页</string>

    <string name="all_address">所有人地址</string>

    <string name="trade_record">交易记录</string>

    <string name="event">事件</string>

    <string name="origin_address">源地址</string>

    <string name="target_address">目标地址</string>

    <string name="date">日期</string>

    <string name="block_browser">区块浏览器</string>

    <string name="already_first_page">已经是第一页了</string>

    <string name="already_last_page">已经是末页了</string>

    <string name="number">数量</string>

    <string name="address_title">地址：%s</string>

    <string name="search_result_empty_str">查找内容不存在，请检查输入内容</string>

    <string name="count_str">数量: %d</string>

    <string name="trade_coin">交易币种</string>

</resources>
