<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <include layout="@layout/layout_base_white_top_bar" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingBottom="40dp">

            <TextView
                android:id="@+id/tv_product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textColor="#ff000000"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="古董1号" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/white_conner_shadow_bg"
                android:orientation="vertical"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">


                <ImageView
                    android:id="@+id/iv_photo"
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:layout_marginTop="15dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all_address"
                        android:textColor="#717171"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_all_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:textSize="14sp"
                        tools:text="0xfb62a51c...c82a04d69" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ruler_address"
                        android:textColor="#717171"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_ruler_hash"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:textSize="14sp"
                        tools:text="0xfb62a51c...c82a04d69" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/token_id"
                        android:textColor="#717171"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_touch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:textSize="14sp"
                        tools:text="0xfb62a51c...c82a04d69" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="15dp"
                    android:paddingBottom="10dp"
                    android:text="@string/product_introduce"
                    android:textColor="#717171"
                    android:textSize="16sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tv_introduce"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="3dp"
                    android:paddingBottom="15dp"
                    android:textSize="11sp"
                    tools:text="古董为唐代三彩，宽20CM，高：30CM。古董为唐代三彩，宽20CM，高：30CM。古董为唐代三彩，宽20CM，高：30CM。高：30CM。古董为唐代三彩，宽20CM，高：30CM" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/white_conner_shadow_bg"
                android:orientation="vertical"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="15dp"
                    android:layout_toRightOf="@id/v1"
                    android:text="@string/trade_record"
                    android:textColor="#ff000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:weightSum="7">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/event"
                        android:textColor="#ff000000"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/origin_address"
                        android:textColor="#ff000000"
                        android:textSize="16sp" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/target_address"
                        android:textColor="#ff000000"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/date"
                        android:textColor="#ff000000"
                        android:textSize="16sp" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_trade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </LinearLayout>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</LinearLayout>
