<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingTop="15dp"
    android:paddingBottom="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trade_hash"
            android:textColor="#ff000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_block_hash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="160dp"
            android:layout_marginStart="5dp"
            android:textColor="#ff365cfe"
            android:textSize="14sp"
            android:ellipsize="middle"
            android:singleLine="true"
            tools:text="0xfb62a51c...c82a04d69" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sender"
            android:textColor="#ff000000"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/tv_send_hash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="160dp"
            android:layout_marginStart="5dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:ellipsize="middle"
            android:singleLine="true"
            tools:text="0xfb62a51c...c82a04d69" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receiver"
            android:textColor="#ff000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_receive_hash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="160dp"
            android:layout_marginStart="5dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:ellipsize="middle"
            android:singleLine="true"
            tools:text="0xfb62a51c...c82a04d69" />
    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trade_num"
            android:textColor="#ff000000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_trade_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="109"
            android:textColor="#ff000000"
            android:textSize="12sp" />


        <TextView
            android:id="@+id/tv_token_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:textColor="#ff000000"
            android:textSize="13sp" />

    </LinearLayout>


    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        tools:text="2020-02-02  20:55:44"
        android:textColor="#ff000000"
        android:textSize="10sp" />


</LinearLayout>
