<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">


    <include layout="@layout/layout_new_base_top_bar" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/header_block_browser_search" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="85dp"
                        android:layout_marginRight="7.5dp"
                        android:layout_weight="1"
                        android:background="@mipmap/bg_nft">

                        <TextView
                            android:id="@+id/title_property"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="15dp"
                            android:text="@string/nft_property"
                            android:textColor="#ffffffff"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tv_property"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/title_property"
                            android:layout_marginLeft="15dp"
                            android:layout_marginTop="5dp"
                            android:textColor="#ffffffff"
                            android:textSize="18sp"
                            tools:text="100000" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="85dp"
                        android:layout_marginLeft="7.5dp"
                        android:layout_weight="1"
                        android:background="@mipmap/bg_score">


                        <TextView
                            android:id="@+id/title_types"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="15dp"
                            android:text="@string/integral_types"
                            android:textColor="#ffffffff"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tv_types"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/title_types"
                            android:layout_marginLeft="15dp"
                            android:layout_marginTop="5dp"
                            android:textColor="#ffffffff"
                            android:textSize="18sp"
                            tools:text="100000" />

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="85dp"
                        android:layout_marginRight="7.5dp"
                        android:layout_weight="1"
                        android:background="@mipmap/bg_height">


                        <TextView
                            android:id="@+id/title_height"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="15dp"
                            android:text="@string/block_height"
                            android:textColor="#ffffffff"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tv_height"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/title_height"
                            android:layout_marginLeft="15dp"
                            android:layout_marginTop="5dp"
                            android:textColor="#ffffffff"
                            android:textSize="18sp"
                            tools:text="100000" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="85dp"
                        android:layout_marginLeft="7.5dp"
                        android:layout_weight="1"
                        android:background="@mipmap/bg_trade">

                        <TextView
                            android:id="@+id/title_trade"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="15dp"
                            android:text="@string/trade_total"
                            android:textColor="#ffffffff"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tv_trade"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/title_trade"
                            android:layout_marginLeft="15dp"
                            android:layout_marginTop="5dp"
                            android:textColor="#ffffffff"
                            android:textSize="18sp"
                            tools:text="100000" />

                    </RelativeLayout>

                </LinearLayout>


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingStart="20dp"
                android:paddingEnd="15dp">

                <View
                    android:id="@+id/v1"
                    android:layout_width="3dp"
                    android:layout_height="17dp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/shape_rectange_r3_365cfe" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:layout_toRightOf="@id/v1"
                    android:text="@string/recent_block_information"
                    android:textColor="#ff000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tv_block_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:drawableRight="@mipmap/to_right_icon_black"
                    android:gravity="center"
                    android:text="@string/more"
                    android:textColor="#ff000000"
                    android:textSize="14sp" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/block_rec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingStart="20dp"
                android:paddingEnd="15dp"
                android:paddingBottom="15dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingStart="20dp"
                android:paddingEnd="15dp">

                <View
                    android:id="@+id/v2"
                    android:layout_width="3dp"
                    android:layout_height="17dp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/shape_rectange_r3_365cfe" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:layout_toRightOf="@id/v2"
                    android:text="@string/recent_trade_information"
                    android:textColor="#ff000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tv_trade_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:drawableRight="@mipmap/to_right_icon_black"
                    android:gravity="center"
                    android:text="@string/more"
                    android:textColor="#ff000000"
                    android:textSize="14sp" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trade_rec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingStart="20dp"
                android:paddingEnd="15dp"
                android:paddingBottom="@dimen/dp15" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>